--- a/src/Components/admin.css
+++ b/src/Components/admin.css
@@ -226,6 +226,7 @@ body:has(.admin-page) {
   }
 
   .menu-btn {
+    display: block;
     position: absolute;
     left: 15px;
     background: transparent;
