admin css update

--- a/src/Components/admin.css
+++ b/src/Components/admin.css
@@ -214,6 +214,8 @@ body:has(.admin-page) {
   .admin-body {
     position: relative;
     flex-direction: column;
+    height: calc(100vh - 55px); 
+    overflow: hidden;  
   }
 
   .admin-header {
@@ -267,10 +269,14 @@ body:has(.admin-page) {
   .admin-chat {
     width: 100%;
     padding: 10px;
+    height: 100%;            
+    overflow: hidden; 
   }
 
   .messages-box {
     padding: 8px;
+    flex: 1;      
+    overflow-y: auto;   
   }
 
   .message span {
