--- a/src/Components/about.css
+++ b/src/Components/about.css
@@ -98,6 +98,9 @@
     text-align: left;
     gap: 30px;
   }
+  .about-text a {
+    display: inline-block;
+  }
   .about-text p {
     text-align: justify;
   }
