--- a/src/Components/about.css
+++ b/src/Components/about.css
@@ -104,6 +104,7 @@
   .about-text button {
     display: block;
     margin: 0 auto;
+    box-shadow: 0px 0px 9px rgba(0, 0, 0);
   }
 
   .profile-image-2 {
