--- a/src/Components/hero.css
+++ b/src/Components/hero.css
@@ -177,6 +177,8 @@
     align-self: flex-start;
     font-size: 15px;
     padding: 14px 18px;
+    box-shadow: 0px 0px 7px rgba(0, 0, 0);
+
   }
 
   .social-icons {
