--- a/src/Components/hero.css
+++ b/src/Components/hero.css
@@ -30,7 +30,7 @@
 }
 
 .hero-left {
-  max-width: 600px; 
+  max-width: 600px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -66,7 +66,7 @@
 .arrow-icon {
   margin-left: 2px;
   display: inline-block; /*used when we want to transform the icon,a,span*/
-  transition: transform 0.4s ease; 
+  transition: transform 0.4s ease;
 }
 
 .about-btn:hover .arrow-icon {
@@ -81,14 +81,14 @@
 
 .social-icons a {
   font-size: 1.5rem;
-  color: #fff; 
-  background-color: black; 
-  border-radius: 50%; 
+  color: #fff;
+  background-color: black;
+  border-radius: 50%;
   padding: 8px 14px;
   display: inline-block; /* Ensures the icon is contained in the background and all icons stays side by side */
   transition: transform 0.25s ease;
 }
-.social-icons a i{
+.social-icons a i {
   position: relative;
   top: 1px;
 }
@@ -98,22 +98,22 @@
 }
 
 .social-icons .linkedin:hover {
-  background-color: #0077b5; 
-  color: white; 
+  background-color: #0077b5;
+  color: white;
 }
 
 .social-icons .github:hover {
-  background-color: #202020; 
+  background-color: #202020;
   color: white;
 }
 
 .social-icons .instagram:hover {
-  background-color: #E1306C; 
+  background-color: #e1306c;
   color: white;
 }
 
 .social-icons .gmail:hover {
-  background-color: #ff0000; 
+  background-color: #ff0000;
   color: white;
 }
 
@@ -134,24 +134,23 @@
 
 /* Responsive */
 @media (max-width: 768px) {
-
   .hero {
-    height: auto;          /* let content define height */
-    min-height: 86vh;     
-    padding-top: 20px;    
+    height: auto; /* let content define height */
+    min-height: 86vh;
+    padding-top: 20px;
     padding-bottom: 50px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start; /* start at top */
-    align-items: center; 
+    align-items: center;
   }
 
   .content {
     flex-direction: column;
     justify-content: flex-start;
-    align-items: flex-start;  
+    align-items: flex-start;
     text-align: left;
-    padding: 0 20px 0; 
+    padding: 0 20px 0;
     gap: 30px;
   }
 
@@ -178,7 +177,6 @@
     font-size: 15px;
     padding: 14px 18px;
     box-shadow: 0px 0px 7px rgba(0, 0, 0);
-
   }
 
   .social-icons {
@@ -191,7 +189,7 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    align-items: flex-start; 
+    align-items: flex-start;
     margin-top: 0;
   }
 
@@ -201,10 +199,10 @@
   }
 
   .hero-image {
-    width: 330px;       
+    width: 330px;
     max-width: 85%;
     height: auto;
-    margin-top: 20px;  
+    margin-top: 20px;
     display: block;
   }
 
